# CRAG-langgraph

./: flake.nix  pyproject.toml
src/crag/: __main__.py  crag.py
