[project]
name = "crag-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "chromadb>=0.6.3",
    "langchain>=0.3.18",
    "langchain-community>=0.3.17",
    "langchain-openai>=0.3.5",
    "langchainhub>=0.1.21",
    "langgraph>=0.2.72",
    "pandas>=2.2.3",
    "tavily-python>=0.5.1",
    "tiktoken>=0.8.0",
]

[project.scripts]
crag = "crag.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.6.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/crag"]
